--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 .demo-card-wide > .mdl-card__title {
   color: #fff;
   width: inherit;
+  height: fit-content;
   background: url('images/maxresdefault.jpg') center / cover;
 }
 
